set(gtest_dir googletest-release-1.11.0/googletest)
add_library(gtest STATIC ${gtest_dir}/src/gtest-all.cc)
target_include_directories(gtest PUBLIC ${gtest_dir} ${gtest_dir}/include)
add_library(gtest_main STATIC ${gtest_dir}/src/gtest_main.cc)
target_link_libraries(gtest_main PUBLIC gtest pthread)
